--- a/src/main/java/com/github/mefi/jkuuza/gui/AppView.form
+++ b/src/main/java/com/github/mefi/jkuuza/gui/AppView.form
@@ -644,7 +644,7 @@
                 <Component class="javax.swing.JButton" name="jButton1">
                   <Properties>
                     <Property name="action" type="javax.swing.Action" editor="org.netbeans.modules.swingapp.ActionEditor">
-                      <action class="com.github.mefi.jkuuza.gui.AppView" id="saveSettingsToProperties" methodName="saveSettingsToProperties"/>
+                      <action class="com.github.mefi.jkuuza.gui.AppView" id="saveSettings" methodName="saveSettings"/>
                     </Property>
                     <Property name="text" type="java.lang.String" resourceKey="jButton1.text"/>
                     <Property name="name" type="java.lang.String" value="jButton1" noResource="true"/>
